--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "lib": ["esnext", "dom", "dom.iterable", "scripthost"],
     "skipLibCheck": true
   },
-  "include": ["tasks/**/*", "tasks/**/*.vue"]
+  "include": ["tasks/**/*"]
 }
