--- a/.github/workflows/testing-workflow.yml
+++ b/.github/workflows/testing-workflow.yml
@@ -2,10 +2,8 @@ name: Node.js CI
 
 on:
   workflow_dispatch:
-  pull_request:
-    branches:
-      - 'task/**'
-      - 'fix/**'
+  merge_group:
+    types: [checks_requested]
 
 jobs:
   build:
