--- a/.github/workflows/testing-workflow.yml
+++ b/.github/workflows/testing-workflow.yml
@@ -1,24 +1,34 @@
-name: Node.js CI
+name: Test running
 
 on:
   workflow_dispatch:
   merge_group:
-    types: [checks_requested]
+  pull_request:
+  push:
+    branches:
+      - 'main'
+
+permissions:
+  contents: read
+  pull-requests: read
 
 jobs:
   build:
+    name: Test
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x, 20.x]
+        node-version: [16.x]
 
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
-      - run: npm install
+          cache: 'npm'
+      - run: npm ci
       - run: npm test
